[gd_scene load_steps=7 format=3 uid="uid://cg2aifxfs8r2u"]

[ext_resource type="Script" path="res://scene/instruction/InputOutput/PolyInstruction.gd" id="1_31uht"]
[ext_resource type="PackedScene" uid="uid://l3lvpw0vs5vw" path="res://scene/instruction/Base/BaseRow.tscn" id="2_xo8cq"]
[ext_resource type="PackedScene" uid="uid://pnn0iyl5fuil" path="res://scene/instruction/Base/BaseLine.tscn" id="3_jyj5w"]
[ext_resource type="Script" path="res://scene/instruction/Base/ColorLabel.gd" id="4_7j6sy"]
[ext_resource type="PackedScene" uid="uid://bnxr1d310gk3l" path="res://scene/instruction/Base/BaseLineColor.tscn" id="5_vhhx0"]
[ext_resource type="PackedScene" uid="uid://cxkqo32fuxva3" path="res://scene/instruction/Base/TextInput.tscn" id="6_timj8"]

[node name="PolyInstruction" type="Panel"]
script = ExtResource("1_31uht")

[node name="BaseRow" parent="." instance=ExtResource("2_xo8cq")]

[node name="BaseLine" parent="BaseRow" instance=ExtResource("3_jyj5w")]

[node name="ColorLabel" type="Label" parent="BaseRow/BaseLine"]
offset_right = 40.0
offset_bottom = 23.0
text = "Draw"
script = ExtResource("4_7j6sy")

[node name="BaseLineColor" parent="BaseRow" instance=ExtResource("5_vhhx0")]

[node name="Label" type="Label" parent="BaseRow/BaseLineColor"]
offset_right = 40.0
offset_bottom = 23.0
text = "Poly       x"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextInput" parent="BaseRow/BaseLineColor" instance=ExtResource("6_timj8")]

[node name="Label2" type="Label" parent="BaseRow/BaseLineColor"]
offset_right = 40.0
offset_bottom = 23.0
text = "y"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextInput2" parent="BaseRow/BaseLineColor" instance=ExtResource("6_timj8")]

[node name="Label3" type="Label" parent="BaseRow/BaseLineColor"]
offset_right = 40.0
offset_bottom = 23.0
text = "sides"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextInput3" parent="BaseRow/BaseLineColor" instance=ExtResource("6_timj8")]

[node name="Label4" type="Label" parent="BaseRow/BaseLineColor"]
offset_right = 40.0
offset_bottom = 23.0
text = "radius"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextInput4" parent="BaseRow/BaseLineColor" instance=ExtResource("6_timj8")]

[node name="Label5" type="Label" parent="BaseRow/BaseLineColor"]
offset_right = 40.0
offset_bottom = 23.0
text = "rotation"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextInput5" parent="BaseRow/BaseLineColor" instance=ExtResource("6_timj8")]
